fix showing chat icon on smaller screen

--- a/src/AppModule/containers/AppMessageInbox/assets/scss/style.scss
+++ b/src/AppModule/containers/AppMessageInbox/assets/scss/style.scss
@@ -42,7 +42,7 @@
         position: fixed;
         right: 0;
         bottom: 0;
-        z-index: 100;
+        z-index: 10001;
         width: 100%;
     }
 
@@ -336,6 +336,7 @@
                                         overflow: hidden;
                                         font-size: 16px;
                                         font-weight: 500;
+                                        line-height: 22px;
                                         color: var(--secondary);
 
                                         .time {
